# SFMLCraft

./: .gitignore  .gitmodules  Application.cpp  Application.h  CMakeLists.txt  Camera.cpp  Camera.h  Config.h  Context.cpp  Context.h  Entity.h  GL.h  Input.cpp  Input.h  Main.cpp  Math.cpp  Math.h  Mesh.h  Model.cpp  Model.h  README.md
Renderer/: QuadRenderer.cpp  QuadRenderer.h  RenderInfo.h  RenderMaster.cpp  RenderMaster.h
Shaders/: Basic.frag  Basic.vert  BasicShader.cpp  BasicShader.h  Shader.cpp  Shader.h  ShaderLoader.cpp  ShaderLoader.h
States/: StateBase.h  StatePlaying.cpp  StatePlaying.h
Texture/: BasicTexture.cpp  BasicTexture.h
Util/: FileUtil.cpp  FileUtil.h  NonCopyable.h
